feat: next question

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,13 @@
     <div class="container">
       <div id="question" class="content">
         <div id="question-content" class="question-content"></div>
+        <div class="question-actions">
+          <button
+            id="question-action-primary"
+            class="question-action"
+            onclick="onPrimaryActionClick()"
+          ></button>
+        </div>
       </div>
       <div id="scoreboard" class="content"></div>
     </div>
