--- a/src/index.html
+++ b/src/index.html
@@ -1,53 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trivia Application</title>
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
-    <script src="./js/main.js" defer></script>
-  </head>
-  <body>
-    <header class="navbar">
-      <h3 id="welcome"></h3>
-      <button id="logout" class="d-none" onclick="onLogoutClick()">
-        Logout
-      </button>
-    </header>
-    <div class="container">
-      <div id="question" class="content">
-        <div id="question-content"></div>
-        <div class="question-actions hide">
-          <button
-            id="question-action-primary"
-            onclick="onPrimaryActionClick()"
-          ></button>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Trivia Application</title>
+        <link rel="stylesheet" type="text/css" href="/css/main.css" />
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.2.0/peerjs.min.js"
+            defer
+        ></script>
+        <script src="/js/main.js" defer></script>
+    </head>
+    <body>
+        <header class="navbar">
+            <h3 id="welcome"></h3>
+            <button id="logout" class="d-none" onclick="onLogoutClick()">
+                Logout
+            </button>
+        </header>
+        <div class="container">
+            <div id="question" class="content">
+                <div id="question-content"></div>
+                <div class="question-actions hide">
+                    <button
+                        id="question-action-primary"
+                        onclick="onPrimaryActionClick()"
+                    ></button>
+                </div>
+            </div>
+            <div id="scoreboard" class="content"></div>
         </div>
-      </div>
-      <div id="scoreboard" class="content"></div>
-    </div>
-    <template id="tplLogin">
-      <div class="login-form">
-        <form onsubmit="onLogin(event)">
-          <h3 style="margin-bottom: 1rem;">Choose a username</h3>
-          <input type="text" style="margin-bottom: 1rem;" name="username" />
-          <button type="submit" style="align-self: flex-end;">
-            Start!
-          </button>
-        </form>
-      </div>
-    </template>
-    <template id="tplQuestion">
-      <div>
-        <div class="question-text"></div>
-        <div class="question-options"></div>
-      </div>
-    </template>
-    <template id="tplParticipant">
-      <div class="participant">
-        <div class="participant-username"></div>
-        <div class="participant-score"></div>
-      </div>
-    </template>
-  </body>
+        <template id="tplLogin">
+            <div class="login-form">
+                <form onsubmit="onLogin(event)">
+                    <h3 style="margin-bottom: 1rem;">Choose a username</h3>
+                    <input
+                        type="text"
+                        style="margin-bottom: 1rem;"
+                        name="username"
+                    />
+                    <button type="submit" style="align-self: flex-end;">
+                        Start!
+                    </button>
+                </form>
+            </div>
+        </template>
+        <template id="tplQuestion">
+            <div>
+                <div class="question-text"></div>
+                <div class="question-options"></div>
+            </div>
+        </template>
+        <template id="tplParticipant">
+            <div class="participant">
+                <div class="participant-username"></div>
+                <div class="participant-score"></div>
+            </div>
+        </template>
+    </body>
 </html>
